--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     "rules": {
         "indent": [
             "error",
-            "tab"
+            4
         ],
         "linebreak-style": [
             "error",
@@ -29,7 +29,7 @@
         "comma-dangle": [
             "error",
             {
-                "objects": "always"
+                "objects": "always-multiline"
             }
         ]
     }
