Enabling eslint template string

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,10 @@
         ],
         "quotes": [
             "error",
-            "double"
+            "double",
+            {
+                "allowTemplateLiterals": true
+            }
         ],
         "semi": [
             "error",
