--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "test": "jest"
+    "test": "jest --watchAll --silent"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
