--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.4.1",
