--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.2.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^2.1.1",
     "eslint": "^8.4.1",
     "jest": "^27.4.4",
     "nodemon": "^2.0.15"
