--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fast-glob": "^3.2.7",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.2",
-    "supertest": "^6.1.6",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^2.1.1",
     "eslint": "^8.4.1",
     "jest": "^27.4.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.1.6"
   }
 }
